--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .home {
     min-height: 100vh;
-    background-image: url("../img/hero4.png");
+    background-image: url("../img/hero.png");
     background-size: cover;
     background-position: center;
     padding: 15px;
