--- a/css/home.css
+++ b/css/home.css
@@ -146,3 +146,26 @@
     transition: all 0.3s ease-in-out;
     /* smooth transition for all changes */
 }
+
+.cv-btn {
+    padding-top: 20px;
+}
+
+.cv-btn a {
+    font-size: 14px;
+    color: rgb(236, 241, 250);
+    background-color: transparent;
+    border: 1px solid rgb(236, 241, 250);
+    border-radius: 4px;
+    padding: 12px 25px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.cv-btn a:hover {
+    background-color: #fff;
+    color: #000;
+}
