--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,7 @@ header {
   padding: 0px 15px;
   left: 0px;
   right: 0px;
+  background-color: black;
   border-bottom: 1px solid #423940;
   z-index: 11;
 }
@@ -47,19 +48,6 @@ header .row {
   color: #000;
 }
 
-.hamburger .fa {
-  font-size: 20px;
-  background-color: rgb(236, 241, 250);
-  color: #01143e;
-  display: none;
-  height: 30px;
-  width: 35px;
-  border-radius: 2px;
-  line-height: 30px;
-  text-align: center;
-  cursor: pointer;
-  border: 1px solid #eee;
-}
 
 .navbar ul {
   list-style: none;
