--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,7 @@ header {
 .fixed {
   background-color: rgb(236, 241, 250);
   position: fixed;
-  border-color: #eee;
+  border-color: #000;
   animation: fixHeader 1s ease;
   z-index: 11;
 }
@@ -35,6 +35,7 @@ header .row {
   justify-content: space-between;
   align-items: center;
 }
+
 
 .brand-name a {
   font-size: 22px;
@@ -86,7 +87,7 @@ header .row {
 }
 
 .fixed .navbar ul li a::before {
-  background-color: #5f88e0;
+  background-color: #000;
 }
 
 .navbar ul li a:hover::before {
