--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,7 @@ a {
     max-width: 100%; 
     margin-top: 20px;
     border-radius: 4px; 
+}
 
 #projectInfo, #additionalText {
     color: #333; 
